Triangulate modifier (also Triangulate Faces operator) changed behavior with custom normals #124836
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#124836
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.86
Blender Version
Broken: version: 4.2.0, branch: blender-v4.2-release, commit date: 2024-07-16 06:20, hash:
a51f293548ad
Worked: blender 4.1 and before
Caused by
f3c32a36bc
Short description of error
Triangulate modifier (also Triangulate Faces operator) changed behavior with custom normals
Exact steps for others to reproduce the error
open
124836.blend
in 4.1enable the
Triangulate
modifierobserve the custom normals are unchanged
open
124836.blend
in 4.2enable the
Triangulate
modifierobserve the custom normals are now changed
This also affects the
Triangulate Faces
operator:open
124836.blend
in 4.1remove the
Triangulate
modifierapply the
WeightedNormal
modifierhit Shift + Ctrl + T
observe the custom normals are unchanged
now open
124836.blend
in 4.2remove the
Triangulate
modifierapply the
WeightedNormal
modifierhit Shift + Ctrl + T
observe the custom normals are now changed
The option was removed because it is always "true" now - custom normals will always be preserved during triangulation. Are you seeing otherwise?
Yes its giving me different result between both blender versions.
I can confirm the difference with the repro file, thanks for that. It's odd because the 4.2 result doesn't match the 4.1 with Keep Normals OFF either. It's doing something, and getting close to 4.1 with Keep normals ON, but the shading is different.
@lichtwerk Did you encounter anything like this while making the changes in
f3c32a36bc
?I did not notice this in the tests I made back then, but will check...
(if is a different method compared to the previous, so if this regressed in quality, we might have to bring back the old method -- or improve upon the one used now...)
This is a duplicate (cant find other issue now)
Hm, apparently the
Triangulate Faces
operator inFixed
mode (Shift Ctrl T) also regressed?Will check further...
Will raise priority, since yeah, this is a regression
Keep Normals option is missing from Triangulate modifierto Triangulate modifier (also Triangulate Faces operator) changed behaviorIn case of the operator:
BMO_op_exec
( "triangulate faces" in our case ) callsbmesh_edit_end
(which will update normals again withBM_mesh_normals_update
), if we callBM_custom_loop_normals_from_vector_layer
afterwards, all is fineBM_custom_loop_normals_from_vector_layer
inedbm_quads_convert_to_tris_exec
afterBMO_op_exec
?In case of the modifier:
@HooglyBoogly might be able to help me out here more quickly
(if this needs to be solved quickly, we might just want to revert
f3c32a36bc
for now)Triangulate modifier (also Triangulate Faces operator) changed behaviorto Triangulate modifier (also Triangulate Faces operator) changed behavior with custom normalsPR to revert is up, see !125499