source/blender/makesdna/DNA_modifier_types.h
@@ -1898,11 +1898,12 @@ typedef struct TriangulateModifierData {
 } TriangulateModifierData;
 
 /** #TriangulateModifierData.flag */
-#ifdef DNA_DEPRECATED_ALLOW
 enum {
+#ifdef DNA_DEPRECATED_ALLOW
   MOD_TRIANGULATE_BEAUTY = (1 << 0), /* deprecated */
-};
 #endif
+  MOD_TRIANGULATE_KEEP_CUSTOMLOOP_NORMALS = 1 << 1,
+};
 
 /** #TriangulateModifierData.ngon_method triangulate method (N-gons). */
 enum {
